# packaging-tutorial

./: .gitattributes  .gitignore  MANIFEST.in  Makefile  Pipfile  README.md  setup.cfg  setup.py  tools.py
.github/workflows/: ci.yaml
docs/: conf.py  index.rst  requirements.txt
flattener/: __init__.py  _version.py  tools.py
tests/: test_tools.py
