[metadata]
name = flattener
author = Python Developer
author_email = x@x.com
description = A useful thing!
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
packages = find:
include_package_data = True
install_requires =

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = flattener/_version.py
versionfile_build = flattener/_version.py
tag_prefix = v

[pylint]
ignore = _version.py

[mypy-flattener._version]
ignore_errors = True

[yapf]
column_limit = 100
